<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">


    <TextView
        android:id="@+id/TitleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:padding="24dp"
        android:text="@string/title_menu_app"
        android:textColor="@color/white"
        android:textSize="@dimen/headerTextSizeMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/UploadDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TitleMenu">

        <Button
            android:id="@+id/btnOptionsDb"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_semibold"
            android:padding="20dp"
            android:text="@string/menu_options"
            android:textAllCaps="false"
            app:cornerRadius="28dp"
            app:icon="@drawable/ic_edit_computer"
            app:iconGravity="top"
            app:iconSize="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnQrReader"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/poppins_semibold"
            android:padding="20dp"
            android:text="@string/business_assets"
            android:textAllCaps="false"
            app:cornerRadius="28dp"
            app:icon="@drawable/ic_bar_code_scan"
            app:iconGravity="top"
            app:iconSize="82dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>