<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.AddBusinessAssetActivity">

    <TextView
        android:id="@+id/titleAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="Nuevo Activo"
        android:textColor="@color/white"
        android:textSize="@dimen/headerTextSizeMenu"
        android:layout_marginTop="12dp"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/titleAdd">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="12dp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toTopOf="@+id/topMenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:id="@+id/areaCreateTextUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="18dp"
                app:layout_constraintTop_toBottomOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/codeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/business_asset_edit_text"
                    app:boxBackgroundMode="none"
                    app:layout_constraintTop_toBottomOf="@+id/creatNameUserLayaout">

                    <EditText
                        android:id="@+id/codeBAEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edit_text"
                        android:inputType="number"
                        android:labelFor="@id/codeLayout"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="12dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameBALayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_business_assets"
                    app:boxBackgroundMode="none">

                    <EditText
                        android:id="@+id/nameBAEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edit_text"
                        android:inputType="text"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="12dp"
                        android:labelFor="@+id/nameBALayout"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TypeBALayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_business_asset"
                    app:boxBackgroundMode="none">

                    <EditText
                        android:id="@+id/typeBAEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edit_text"
                        android:inputType="text"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="12dp"
                        android:labelFor="@+id/TypeBALayout"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionBALayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_business_assets"
                    android:gravity="start"
                    app:boxBackgroundMode="none">

                    <EditText
                        android:id="@+id/descriptionBAEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="80dp"
                        android:gravity="start"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_edit_text"
                        android:inputType="textCapSentences|textMultiLine"
                        android:labelFor="@id/descriptionBALayout"
                        android:paddingTop="5dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sectorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sector_business_asset"
                    app:boxBackgroundMode="none">

                    <EditText
                        android:id="@+id/sectorBAEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edit_text"
                        android:inputType="text"
                        android:labelFor="@id/sectorLayout"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="12dp"
                        tools:ignore="LabelFor,TextFields,TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/attendantLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/attendat_business_assets"
                    app:boxBackgroundMode="none">

                    <EditText
                        android:id="@+id/attendantBAEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_edit_text"
                        android:inputType="text"
                        android:labelFor="@id/attendantLayout"
                        android:paddingTop="10dp"/>
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageButton
                        android:id="@+id/saveBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:padding="4dp"
                        android:src="@drawable/ic_check"
                        android:contentDescription="@string/save_business_assets"/>

                    <ImageButton
                        android:id="@+id/cancelBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:padding="4dp"
                        android:src="@drawable/ic_cancel"
                        android:contentDescription="@string/cancel"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>