<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".activities.BusinessAssetDetailActivity">

    <LinearLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingStart="24dp"
        android:paddingEnd="4dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/SE_"
            android:textColor="@color/white"
            android:textSize="@dimen/headerTextSizeMenu"/>
        <TextView
            android:id="@+id/TitleBA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/detail_business_asset"
            android:textColor="@color/white"
            android:textSize="@dimen/headerTextSizeMenu"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toBottomOf="@+id/topMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="@+id/topMenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/areaEditTextUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textApp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:text="@string/code_business_asset" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SE_"
                        android:textColor="@color/black"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="14dp"/>
                    <EditText
                        android:id="@+id/codeBATv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edit_text"
                        android:inputType="number"
                        android:labelFor="@id/codeLayout"
                        android:padding="8dp"
                        android:fontFamily="@font/poppins"
                        android:textSize="@dimen/textSizeMenu"
                        tools:text="1234567890" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/name_business_asset"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textApp" />
                <EditText
                    android:id="@+id/nameBATv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="text"
                    android:padding="8dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/textSizeMenu"
                    android:layout_marginBottom="8dp"
                    tools:text="REFRIGERADOR - FRIGOBAR - CONSERVADORA"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/type_business_asset"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textApp" />
                <EditText
                    android:id="@+id/typeBATv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="text"
                    android:padding="8dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/textSizeMenu"
                    android:layout_marginBottom="8dp"
                    tools:text="MAQUINARIA EN GENERAL" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/description_business_asset"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textApp" />
                <EditText
                    android:id="@+id/descriptionBATv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:gravity="start"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="8dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/textSizeMenu"
                    android:layout_marginBottom="8dp"
                    tools:text="RETROEXACAVADORA CON BRAZOS EXTENSIBLES MARCA=CATERPILLAR MODELO=416F2 AÑO=2017 PLACA N/T MOTOR=G4D58806 NO CHASIS CATO416FELBF03779 COLOR AMARRILLO M=181" />/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/sector_business_asset"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textApp" />
                <EditText
                    android:id="@+id/sectorBATv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="text"
                    android:padding="8dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/textSizeMenu"
                    android:layout_marginBottom="8dp"
                    tools:text="GAF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/attendant_business_asset"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textApp" />
                <EditText
                    android:id="@+id/attendantBATv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="text"
                    android:padding="8dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/textSizeMenu"
                    android:layout_marginBottom="8dp"
                    tools:text="Mahonry Perez" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/textApp"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:text="Fecha de creación" />
                <TextView
                    android:id="@+id/addedTimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textApp"
                    android:fontFamily="@font/poppins"
                    tools:text="12/12/23 23:12:12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textApp"
                    android:text="Fecha de actualización" />
                <TextView
                    android:id="@+id/updateTimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textApp"
                    android:fontFamily="@font/poppins"
                    tools:text="12/12/23 23:12:12" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/editBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/save_business_assets"
                        android:padding="4dp"
                        android:src="@drawable/ic_edit" />

                    <ImageButton
                        android:id="@+id/deleteBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/cancel"
                        android:padding="4dp"
                        android:src="@drawable/ic_trash" />

                    <ImageButton
                        android:id="@+id/BackHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/cancel"
                        android:padding="4dp"
                        android:src="@drawable/ic_cancel" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>